--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="shortcut icon" href="assets/images/favicon (1).ico" type="image/x-icon">
 </head>
 <body>
-    <section>
+    <section id="game-section">
     <h1 class="heading">Tic Tac Toe</h1>
     <div id="cell-container">
-        <div cell-index="0" class="cell"></div>
-        <div cell-index="1" class="cell"></div>
+        <div cell-index="0" class="cell">o</div>
+        <div cell-index="1" class="cell">x</div>
         <div cell-index="2" class="cell"></div>
         <div cell-index="3" class="cell"></div>
         <div cell-index="4" class="cell"></div>
@@ -26,10 +26,10 @@
         <div cell-index="8" class="cell"></div>
     </div>
     <h2 class="game-status"></h2>
-    <button id="game-restart">Restart</button>
+    <button id="game-restart-btn">Restart</button>
     <div class="score-area">
-        <p class="scores">X Wins <span id="x-score">0</span></p>
-        <p class="scores">O Wins <span id="o-score">0</span></p>
+        <p class="scores">X Wins <span id="x-score">0</span> times.</p>
+        <p class="scores">O Wins <span id="o-score">0</span> times.</p>
     </div>
     </section>
 
