Add styles and icons for footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,31 +12,47 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/favicon (1).ico" type="image/x-icon">
 </head>
+
 <body>
     <section id="game-section">
-    <h1 class="heading">Tic Tac Toe</h1>
-    <div id="cell-container">
-        <div cell-index="0" class="cell">o</div>
-        <div cell-index="1" class="cell">x</div>
-        <div cell-index="2" class="cell"></div>
-        <div cell-index="3" class="cell"></div>
-        <div cell-index="4" class="cell"></div>
-        <div cell-index="5" class="cell"></div>
-        <div cell-index="6" class="cell"></div>
-        <div cell-index="7" class="cell"></div>
-        <div cell-index="8" class="cell"></div>
-    </div>
-    <h2 class="game-status"></h2>
-    <button id="game-restart-btn">Restart</button>
-    <div class="score-area">
-        <p class="scores">X Wins <span id="x-score">0</span> times.</p>
-        <p class="scores">O Wins <span id="o-score">0</span> times.</p>
-    </div>
+        <h1 class="heading">Tic Tac Toe</h1>
+        <div id="cell-container">
+            <div cell-index="0" class="cell">o</div>
+            <div cell-index="1" class="cell">x</div>
+            <div cell-index="2" class="cell"></div>
+            <div cell-index="3" class="cell"></div>
+            <div cell-index="4" class="cell"></div>
+            <div cell-index="5" class="cell"></div>
+            <div cell-index="6" class="cell"></div>
+            <div cell-index="7" class="cell"></div>
+            <div cell-index="8" class="cell"></div>
+        </div>
+        <h2 class="game-status"></h2>
+        <button id="game-restart-btn">Restart</button>
+        <div class="score-area">
+            <p class="scores">X Wins <span id="x-score">0</span> times.</p>
+            <p class="scores">O Wins <span id="o-score">0</span> times.</p>
+        </div>
     </section>
 
-    <footer></footer>
+    <footer class="footer">
+        <h2>Follow Us</h2>
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (Opens in a new tab)"><i
+                        class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (Opens in a new tab)"><i
+                            class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
     <!-- Font Awesome script -->
     <script src="https://kit.fontawesome.com/3d1edd19b8.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
