--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/images/favicon (1).ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <section id="game-section">
         <h1 class="heading">Tic Tac Toe</h1>
         <div id="cell-container">
-            <div cell-index="0" class="cell">o</div>
-            <div cell-index="1" class="cell">x</div>
+            <div cell-index="0" class="cell"></div>
+            <div cell-index="1" class="cell"></div>
             <div cell-index="2" class="cell"></div>
             <div cell-index="3" class="cell"></div>
             <div cell-index="4" class="cell"></div>
@@ -27,14 +27,13 @@
             <div cell-index="7" class="cell"></div>
             <div cell-index="8" class="cell"></div>
         </div>
-        <h2 class="game-status">Draw</h2>
+        <h2 class="game-status" id="winner"></h2>
         <button id="game-restart-btn">Restart</button>
         <div class="score-area">
             <p class="scores">X Wins <span id="x-score">0</span> times.</p>
             <p class="scores">O Wins <span id="o-score">0</span> times.</p>
         </div>
     </section>
-
     <footer class="footer">
         <h2>Follow Us</h2>
         <ul>
