Add game status element and variables

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div cell-index="7" class="cell"></div>
             <div cell-index="8" class="cell"></div>
         </div>
-        <h2 class="game-status" id="winner"></h2>
+        <h2 class="game-status"></h2>
         <button id="game-restart-btn">Restart</button>
         <div class="score-area">
             <p class="scores">X Wins <span id="x-score">0</span> times.</p>
