Add styling to header footer and button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
+    <header>
+        <h1 class="heading"><span class="tic">Tic</span> <span class="tac">Tac</span> <span class="toe">Toe</span></h1>
+    </header>
     <section id="game-section">
-        <h1 class="heading">Tic Tac Toe</h1>
         <div id="cell-container">
             <div cell-index="0" class="cell"></div>
             <div cell-index="1" class="cell"></div>
@@ -44,8 +46,8 @@
             </li>
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (Opens in a new tab)"><i
-                            class="fa-brands fa-square-instagram"></i></a>
+                    aria-label="Visit our Instagram page (Opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
             </li>
         </ul>
     </footer>
