Add 404html page and 404md file with basic styling and link to home page

--- a/404.html
+++ b/404.html
@@ -17,24 +17,12 @@
     <header>
         <h1 class="heading"><span class="tic">Tic</span> <span class="tac">Tac</span> <span class="toe">Toe</span></h1>
     </header>
-    <section id="game-section">
-        <div id="cell-container">
-            <div cell-index="0" class="cell"></div>
-            <div cell-index="1" class="cell"></div>
-            <div cell-index="2" class="cell"></div>
-            <div cell-index="3" class="cell"></div>
-            <div cell-index="4" class="cell"></div>
-            <div cell-index="5" class="cell"></div>
-            <div cell-index="6" class="cell"></div>
-            <div cell-index="7" class="cell"></div>
-            <div cell-index="8" class="cell"></div>
-        </div>
-        <h2 class="game-status"></h2>
-        <button id="game-restart-btn">Restart</button>
-        <div class="score-area">
-            <p class="scores">X Wins <span id="x-score">0</span> times.</p>
-            <p class="scores">O Wins <span id="o-score">0</span> times.</p>
-        </div>
+    <section id="error-page">
+        <h1>Oops!</h1>
+        <h2>Sorry. Page Not Found.</h2>
+        <p>The page you requested could not be found.</p>
+        <p>Let us help guide you out and get you back <span><a href="index.html"
+                    aria-label="Link to the home page">HOME</a></span>.</p>
     </section>
     <footer class="footer">
         <h2>Follow Us</h2>
@@ -53,7 +41,6 @@
     </footer>
     <!-- Font Awesome script -->
     <script src="https://kit.fontawesome.com/3d1edd19b8.js" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
