--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </header>
     <section id="game-section">
         <div id="cell-container">
-            <div cell-index="0" class="cell"></div>
-            <div cell-index="1" class="cell"></div>
-            <div cell-index="2" class="cell"></div>
-            <div cell-index="3" class="cell"></div>
-            <div cell-index="4" class="cell"></div>
-            <div cell-index="5" class="cell"></div>
-            <div cell-index="6" class="cell"></div>
-            <div cell-index="7" class="cell"></div>
-            <div cell-index="8" class="cell"></div>
+            <div id="0" class="cell"></div>
+            <div id="1" class="cell"></div>
+            <div id="2" class="cell"></div>
+            <div id="3" class="cell"></div>
+            <div id="4" class="cell"></div>
+            <div id="5" class="cell"></div>
+            <div id="6" class="cell"></div>
+            <div id="7" class="cell"></div>
+            <div id="8" class="cell"></div>
         </div>
-        <h2 class="game-status"></h2>
+        <h2 class="game-status">0</h2>
         <button id="game-restart-btn">Restart</button>
         <div class="score-area">
             <p class="scores">X Wins <span id="x-score">0</span> times.</p>
