--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <p class="scores">O Wins <span id="o-score">0</span> times.</p>
         </div>
     </section>
+    <section class="rules">
+        <h2>Rules</h2>
+        <p>Player one is X, player two is O. Players take turns putting their marks in the empty squares.</p>
+        <p>The first player to get three of the marks in a row, can be up, down, across, or diagonally, is the winner.</p>
+        <p>When all nine squares ara full, the game is over.</p>
+    </section>
     <footer class="footer">
         <h2>Follow Us</h2>
         <ul>
